2010-09-29  Peter Varga  <pvarga@inf.u-szeged.hu>

Reviewed by Csaba Osztrogonác.

        JSC compile fails on 32bit platform when Regexp Tracing is enabled
        https://bugs.webkit.org/show_bug.cgi?id=46713

        Fix the cast of pointer in regexp tracing to avoid the warning.

        * runtime/RegExp.cpp:
        (JSC::RegExp::match):

Canonical link: https://commits.webkit.org/59301@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@68639 268f45cc-cd09-0410-ab3c-d52691b4dbfc